--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "dev": "nodemon ./bin/www"
+    "dev": "nodemon ./bin/www",
+    "format": "prettier --write '**/*.{js,json,md}'",
+    "lint": "eslint . --ext .js"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
@@ -13,6 +15,8 @@
     "morgan": "~1.9.1"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1"
+    "eslint": "^8.51.0",
+    "nodemon": "^3.0.1",
+    "prettier": "^3.0.3"
   }
 }
