--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "figlet": "^1.6.0",
+    "mongoose": "^7.6.0",
     "morgan": "~1.9.1"
   },
   "devDependencies": {
