--- a/package.json
+++ b/package.json
@@ -1,20 +1,28 @@
 {
-  "name": "base-api-node",
+  "name": "base-api-express-generator",
   "version": "0.0.0",
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
     "dev": "NODE_ENV=development nodemon ./bin/www ",
     "format": "prettier --write '**/*.{js,json,md}'",
-    "lint": "eslint . --ext .js"
+    "lint": "eslint . --ext .js",
+    "migrate": "migrate-mongo",
+    "migrate-dev": "NODE_ENV=development migrate-mongo"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
     "dotenv": "^16.3.1",
     "express": "~4.16.1",
     "figlet": "^1.6.0",
+    "jsonwebtoken": "^9.0.2",
+    "migrate-mongo": "^11.0.0",
+    "mongodb": "^6.1.0",
     "mongoose": "^7.6.0",
+    "mongoose-validator": "^2.1.0",
     "morgan": "~1.9.1"
   },
   "devDependencies": {
