--- a/package.json
+++ b/package.json
@@ -2,32 +2,33 @@
   "name": "base-api-express-generator",
   "version": "0.0.0",
   "private": true,
+  "type": "module",
   "scripts": {
-    "start": "node ./bin/www",
-    "dev": "NODE_ENV=development nodemon ./bin/www ",
-    "format": "prettier --write '**/*.{js,json,md}'",
-    "lint": "eslint . --ext .js",
+    "start": "node ./bin/www.js",
+    "dev": "NODE_ENV=development nodemon ./bin/www.js",
+    "prettify": "prettier --write '**/*.{js,json,md}'",
+    "lint": "eslint .",
     "migrate": "migrate-mongo",
     "migrate-dev": "NODE_ENV=development migrate-mongo"
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
-    "cookie-parser": "~1.4.4",
+    "cookie-parser": "~1.4.7",
     "cors": "^2.8.5",
-    "debug": "~2.6.9",
-    "dotenv": "^16.3.1",
-    "express": "~4.16.1",
-    "figlet": "^1.6.0",
+    "debug": "~4.3.7",
+    "dotenv": "^16.4.5",
+    "express": "~4.21.1",
+    "figlet": "^1.8.0",
     "jsonwebtoken": "^9.0.2",
     "migrate-mongo": "^11.0.0",
-    "mongodb": "^6.1.0",
-    "mongoose": "^7.6.0",
+    "mongodb": "^6.10.0",
+    "mongoose": "^8.7.3",
     "mongoose-validator": "^2.1.0",
-    "morgan": "~1.9.1"
+    "morgan": "~1.10.0"
   },
   "devDependencies": {
-    "eslint": "^8.51.0",
-    "nodemon": "^3.0.1",
-    "prettier": "^3.0.3"
+    "eslint": "^9.13.0",
+    "nodemon": "^3.1.7",
+    "prettier": "^3.3.3"
   }
 }
