--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "start": "node ./bin/www.js",
-    "dev": "NODE_ENV=development nodemon ./bin/www.js",
+    "dev": "cross-env NODE_ENV=development nodemon ./bin/www.js",
     "prettify": "prettier --write '**/*.{js,json,md}'",
     "lint": "eslint .",
     "migrate": "migrate-mongo",
@@ -15,6 +15,7 @@
     "bcrypt": "^5.1.1",
     "cookie-parser": "~1.4.7",
     "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
     "debug": "~4.3.7",
     "dotenv": "^16.4.5",
     "express": "~4.21.1",
